Layout bug sorted

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .main {
-  height: 100vh;
+  height: fit-content;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -13,6 +13,7 @@
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
+  margin-bottom: 30px;
 }
 .intro {
   width: 400px;
@@ -61,4 +62,9 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+}
+@media only screen and (max-width: 530px) {
+  .main {
+    margin-bottom: 100px;
+  }
 }
